# supply-chain-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 2d8ec43164c7_remove_s3type_field_from_emailattachment.py  3753f5789fc5_add_emailattachment_migration.py  6fba3dc83d75_initial_migration.py  7b5ca7b8d496_initial_migration.py  bdd4bf1897cb_add_file_name_field_into_emailattachment.py
app/: app.py  db_models.py  dependencies.py  settings.py  utils.py
app/webhook/: api.py
task/: celery_worker.py  celeryconfig.py
